--- a/ex2.html
+++ b/ex2.html
@@ -6,13 +6,10 @@
 		<title>Cadastro de usuários na Tabela</title>
 	</head>
 	<body>
-		<h1
-			style="
+		<h1 style="
 				text-align: center;
 				color: rgb(167, 109, 33);
-				font-family: Arial, Helvetica, sans-serif;
-			"
-		>
+				font-family: Arial, Helvetica, sans-serif;">
 			Inserir dados de usuários na Tabela
 		</h1>
 
@@ -55,7 +52,7 @@
 					<tr style="background-color: #ccc">
 						<th style="width: 40%">Nome</th>
 						<th style="width: 10%">Idade</th>
-						<th style="width: 20">Função</th>
+						<th style="width: 20%">Função</th>
 						<th style="width: 15%">Telefone</th>
 						<th style="width: 15%">Ações</th>
 					</tr>
